# traffic-rl

./: .gitignore  AGENTS.md  README.md  RLAgents.md  pyproject.toml  requirements.txt  spec.md
cityflow_data/: roadnet.json
configs/: cityflow.example.yaml  cityflow.more_cycles.yaml  cityflow.quick.yaml  cityflow_engine.example.json  default.yaml  pems04_to_cityflow.example.yaml  tabular.yaml
findings/: pems_cityflow_split_significance.md
notebooks/: agent_comparison.ipynb  main_data_prep_train_test_eval.ipynb
src/traffic_rl/: analysis.py  config.py  evaluation.py  reward.py  training.py  types.py  visualization.py
src/traffic_rl/agents/: base.py  double_dqn.py  dqn.py  dueling_dqn.py  factory.py  fixed_time.py  tabular_q.py
src/traffic_rl/cli/: compare.py  compare_agents.py  compare_splits.py  evaluate.py  pems_build.py  train.py  visualize.py
src/traffic_rl/envs/: base.py  cityflow_env.py  factory.py  mock_env.py
src/traffic_rl/pems/: __init__.py  pipeline.py
tests/: test_agents.py  test_analysis.py  test_compare_splits.py  test_config.py  test_double_dqn.py  test_dueling_dqn.py  test_evaluation.py  test_pems_pipeline.py  test_training.py  test_visualization.py
tools/: compare_trained_untrained_eval.py  debug_checkpoint_inspect.py  generate_notebook_figures.py  inspect_eval_distributions.py  presentation_end_to_end.py  presentation_pipeline_helpers.py  run_eval_debug.py
